# coins

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: release.yml
src/: api.rs  app.rs  main.rs  ui.rs
