[package]
name = "coins"
version = "0.1.2"
edition = "2021"
authors = ["Dongri Jin"]
description = "A terminal-based cryptocurrency price tracker using CoinGecko API"
license = "MIT"
repository = "https://github.com/dongri/coins"
keywords = ["cryptocurrency", "bitcoin", "terminal", "tui", "coingecko"]
categories = ["command-line-utilities", "finance"]

[[bin]]
name = "coins"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# JSON serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Number formatting
num-format = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
